Fix title bar buttons not working on mobile devices

--- a/homeScreen/style.css
+++ b/homeScreen/style.css
@@ -147,6 +147,7 @@ html, body {
     color: var(--text-color);
     border: none;
     cursor: pointer;
+    touch-action: auto;
 }
 .iframe {
     flex: 1;
